Create upload template with bootstrap

--- a/objectDetection/templates/textDetection.html
+++ b/objectDetection/templates/textDetection.html
@@ -17,7 +17,7 @@
     <div class="tab-content">
       <div id="home" class="tab-pane active">
         <h3>Breaking Captcha Solution</h3>
-        
+        {% include 'uploadFile.html' %}
       </div>
       <div id="API" class="tab-pane">
         <h3>API</h3>
