--- a/objectDetection/templates/base.html
+++ b/objectDetection/templates/base.html
@@ -33,6 +33,13 @@
     type="text/css"
     media="all"
   />
+  <link
+    rel="stylesheet"
+    id="ample-style-css"
+    href="{% static 'css/uploadFile.css' %}"
+    type="text/css"
+    media="all"
+  />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
