--- a/static/css/solution.css
+++ b/static/css/solution.css
@@ -12,15 +12,31 @@
     color: rgb(117, 117, 117) !important;
     border-bottom: 1px dashed rgb(54, 54, 54) !important; ;
 }
-.solution_body{
+.solution_body, .feedback{
     display: flex;
 }
-.right_solution{
+.right_solution, .feedback_comment{
     flex-grow: 1;
     margin-left: 15px;
   
 }
-.right_solution textarea{
+.right_solution textarea,.feedback_comment textarea {
     border: 2px solid rgb(211, 211, 211);
     padding: 10px;
+}
+.progress{
+    margin-top: 10px !important;
+    margin-bottom: 20px;
+}
+.comment_button{
+    display: flex;
+    padding-right: 20px;
+}
+.comment_button button{
+    flex-grow: 1;
+    padding: 15px;
+   
+}
+.feedback{
+    margin: 20px auto;
 }
