--- a/objectDetection/templates/uploadFile.html
+++ b/objectDetection/templates/uploadFile.html
@@ -1,13 +1,14 @@
 {% load static%}
-<body>
+
 	<div class="container">
 		<div class="row mt-5">
 			<div class="col-md-6 offset-md-3">
-				<form id="upload-form">
+				<form id="upload-form" action="{% url 'uploadFile' %}" enctype="multipart/form-data">
+					{% csrf_token %}
 					<div class="dropzone" id="dropzone">
 						<i class="fas fa-cloud-upload-alt"></i>
 						<div class="text-muted">Drag and drop files here or click to select files</div>
-						<input type="file" id="upload-btn" multiple>
+						<input type="file" name="file" id="upload-btn" multiple>
 					</div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
