Upload image to the server

--- a/objectDetection/templates/uploadFile.html
+++ b/objectDetection/templates/uploadFile.html
@@ -8,11 +8,12 @@
 					<div class="dropzone" id="dropzone">
 						<i class="fas fa-cloud-upload-alt"></i>
 						<div class="text-muted">Drag and drop files here or click to select files</div>
-						<input type="file" name="file" id="upload-btn" multiple>
+						<input type="file" name="file" id="upload-btn" accept="image/*">
 					</div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 					</div>
+					
 					<button type="submit" class="btn btn-primary mt-3" id="upload-submit" disabled>Upload</button>
 				</form>
 			</div>
