--- a/objectDetection/templates/textDetection.html
+++ b/objectDetection/templates/textDetection.html
@@ -2,63 +2,152 @@
 {% load static%} 
 {% block content %} 
 
+<style>
 
+#solution {
+  font-size: 24px;
+  color: black;
+  line-height: 1.5;
+  overflow: hidden;
+  animation: typing 1s steps(40, end), blink-caret .75s step-end infinite;
+  
+}
+#solution {
+  pointer-events: none;
+  opacity: 0.5;
+  background-color: #040404;
+  color: #fff;
+}
+
+#solution::-webkit-scrollbar {
+  width: 12px;
+}
+
+#solution::-webkit-scrollbar-thumb {
+  background-color: #040404;
+  border-radius: 10px;
+  border: 3px solid #fff;
+  color: #faf6f6;
+}
+
+#solution::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa;
+}
+
+#solution::-webkit-scrollbar-thumb:active {
+  background-color: #777;
+}
+</style>
 <div class="container">
-    <h2>Text Detection</h2>
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" data-toggle="tab" href="#home">Breaking Captcha Solution</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#API">API</a>
-      </li>
-     
-    </ul>
-    <div class="tab-content">
-      <div id="home" class="tab-pane active">
-        <h3>Breaking Captcha Solution</h3>
-        {% include 'uploadFile.html' %}
-        <div class="solution">
-          <div class="solution_title">
-            <h3>Solution</h3>
-          </div>
-          <div class="solution_body">
-            <div class="left_solution">
-              <button class="bg-success" type="submit"> Breaking Captcha</button>
+  <h2>Text Detection</h2>
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#home">Breaking Captcha Solution</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#API">API</a>
+    </li>
+  </ul>
+  <div class="tab-content">
+    <div id="home" class="tab-pane active">
+      <h3>Breaking Captcha Solution</h3>
+      {% include 'uploadFile.html' %}
+      <div class="solution">
+        <div class="solution_title">
+          <h3>Solution</h3>
+        </div>
+        <div class="solution_body">
+          <div class="left_solution">
+            <button id="crackButton" onclick="APIstartCracking()" class="bg-success" type="submit"> Breaking Captcha</button>
             <div class="solution_progress">
               <label for="progre">Progress:</label>
               <div class="progress">
-                
-                <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                <div id="progressBC" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
               </div>
             </div>
-             
-            
-            </div>
-            <div class="right_solution">
-              <textarea name="solution" id="solution" cols="30" rows="10"></textarea>
-             
-            </div>
           </div>
-      
-        </div>
-        <div class="feedback">
-          <div class="ratting">
-            {% include 'RatingStar.html' %}
+          <div class="right_solution">
+            <textarea name="solution" id="solution" cols="30" rows="10"></textarea>
           </div>
-      <div class="feedback_comment">
-        <textarea name="solution" id="solution" cols="30" rows="10" placeholder="Your feedback is important to us. Please leave a comment and rating for our solutions. Thank you!"></textarea>
-        <div class="comment_button">
-          <button type="button" class="btn btn-dark btn-lg btn-block w-100">Comment</button>
-
-        </div>
-</div>
         </div>
       </div>
-      <div id="API" class="tab-pane">
-        <h3>API</h3>
-        
+      <div class="feedback">
+        <div class="ratting">
+          {% include 'RatingStar.html' %}
+        </div>
+        <div class="feedback_comment">
+          <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Your feedback is important to us. Please leave a comment and rating for our solutions. Thank you!"></textarea>
+          <div class="comment_button">
+            <button type="button" class="btn btn-dark btn-lg btn-block w-100">Comment</button>
+          </div>
+        </div>
       </div>
-    
+      </div>
+      </div>
+    <div id="API" class="tab-pane">
+      aaaa
     </div>
+  </div>
+
+
+   
+    <script>
+      
+      function APIstartCracking() {
+       
+         // disable the button after it's clicked
+        document.getElementById("crackButton").disabled = true;
+        const xhr = new XMLHttpRequest();
+        xhr.open('GET', '/api-text-detection/');
+        xhr.onload = function() {
+          if (xhr.status === 200) {
+            const data = JSON.parse(xhr.responseText);
+            showTypingAnimation(data);
+            // Do something with the result
+          } else {
+            alert('Request failed. Status code: ' + xhr.status);
+          }
+        };
+        xhr.send();
+      }
+      function showTypingAnimation(data) {
+        const textarea = document.getElementById('solution');
+        const animationDelay = 100; // Delay between each character being typed
+        const animationDuration = data.length * (60 / 70) * 60; // Total time taken for the animation at 70 wpm
+        const typingSpeed = Math.round(animationDuration / data.length); // Speed at which the characters are typed
+
+        
+
+        let currentText = '';
+        let startTime = null;
+        const intervalId = setInterval(() => {
+          const elapsed = Date.now() - startTime;
+          const progressPercentage = Math.round((elapsed / animationDuration) * 100);
+          if (currentText.length < data.length) {
+            currentText += data.charAt(currentText.length);
+            textarea.innerHTML = currentText + '|';
+          } else {
+            clearInterval(intervalId);
+            textarea.innerHTML = currentText;
+            textarea.style.display = 'block';
+          }
+        }, typingSpeed);
+
+        startTime = Date.now();
+
+        // Update the progress bar
+        const progressBar = document.getElementById('progressBC');
+        const progressInterval = setInterval(() => {
+          const elapsed = Date.now() - startTime;
+          const progressPercentage = Math.round((elapsed / animationDuration) * 100);
+          if (progressPercentage >= 100) {
+            clearInterval(progressInterval);
+          }
+          progressBar.style.width = progressPercentage + '%';
+          progressBar.textContent = progressPercentage + '%';
+        }, animationDelay);
+          
+    }
+
+    </script>
   {% endblock %}
