all the user to create messages and update them to database

--- a/objectDetection/templates/star.html
+++ b/objectDetection/templates/star.html
@@ -38,9 +38,10 @@
 
   var starPercentage = "{{ rateValue }}" / 5 * 100;
   var starPercentageRounded = `${Math.round(starPercentage / 10) * 10}%`;
-  var name = "{{ name }}";
-  document.querySelector(`.${name} .stars-inner`).style.width = starPercentageRounded;
+  var name = "rate{{name}}";
   console.log(`.${name} .stars-inner`);
+  document.querySelector(`.${name} .stars-inner`).style.width = starPercentageRounded;
+ 
 
 
 </script>
