--- a/objectDetection/templates/RatingStar.html
+++ b/objectDetection/templates/RatingStar.html
@@ -36,7 +36,7 @@ for (let i = 0; i < star.length; i++) {
 	star[i].addEventListener('click', function() {
 		i = this.value;
 
-		showValue.innerHTML = i + " out of 5";
+		showValue.innerHTML = i
 	});
 }
 
