--- a/objectDetection/templates/base.html
+++ b/objectDetection/templates/base.html
@@ -179,7 +179,7 @@
       <button
         type="button"
         class="btn-close"
-        data-bs-dismiss="alert"
+        data-dismiss="alert"
         aria-label="Close"
       ></button>
     </div>
